# quicklan

./: .gitignore  README.md  conversation-export.txt  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  commands.rs  control_api.rs  discovery.rs  game.rs  lan_api.rs  lib.rs  library.rs  main.rs  protocol.rs  settings.rs  storage.rs  transfer.rs  watch.rs  watch_player.rs
src-tauri/windows/: hooks.nsi
