[package]
name = "quicklan"
version = "0.1.3-b"
description = "Windows LAN distributed file sharing and transfer"
authors = ["xiaolong su"]
edition = "2021"

[lib]
name = "quicklan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quicklan"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
hostname = "0.4"
get_if_addrs = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }
